--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-eslint": "^6.0.0",
     "gulp-if": "^3.0.0",
     "gulp-postcss": "^9.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.0.9",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^3.0.0",
@@ -41,7 +41,8 @@
     "minimatch": "^3.0.2",
     "normalize.scss": "^0.1.0",
     "patch-package": "^6.1.2",
-    "postcss": "^8.0.0"
+    "postcss": "^8.0.0",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
